--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <script src="pomodoro.js"></script>
     </head>
 <body>
-    <div id="main_clock">25:00</div>
+    <div id="main_clock"><button type="button" id="timer">25:00</button></div>
     <div id="settings">
-        <div><button id="substract_break">-</button><p id="break_time">5</p><button id="add_break">+</button></div>
-        <div><button id="substract_session">-</button><p id="session_time">25</p><button id="add_session">+</button></div>
+        <div><button type="button" id="substract_break">-</button><p id="break_time">5</p><button type="button" id="add_break">+</button></div>
+        <div><button type="button" id="substract_session">-</button><p id="session_time">25</p><button type="button" id="add_session">+</button></div>
     </div>
 </body>
 </html>
