--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8"> 
+        <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="main.css">
         <script src="jquery-3.1.1.js"></script>
         <script src="pomodoro.js"></script>
